# ChangeLog for dev-cpp/gflags
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/gflags/ChangeLog,v 1.35 2015/07/22 06:18:08 vapier Exp $

  22 Jul 2015; Mike Frysinger <vapier@gentoo.org> gflags-2.1.1-r1.ebuild,
  gflags-9999.ebuild:
  Add arm64 love.

  07 Jun 2015; Justin Lecher <jlec@gentoo.org> metadata.xml:
  Add github to remote-id in metadata.xml

  01 May 2015; Jeroen Roovers <jer@gentoo.org> gflags-2.1.1-r1.ebuild:
  Stable for PPC64 (bug #540844).

  25 Oct 2014; Michael Palimaka <kensington@gentoo.org> -gflags-2.0-r1.ebuild,
  -gflags-2.0.ebuild:
  Remove old.

  25 Oct 2014; Markus Meier <maekke@gentoo.org> gflags-2.1.1-r1.ebuild:
  arm stable, bug #525966

  23 Oct 2014; Pacho Ramos <pacho@gentoo.org> gflags-2.1.1-r1.ebuild:
  amd64/x86 stable, bug #525966

*gflags-9999 (17 Jul 2014)

  17 Jul 2014; Mike Gilbert <floppym@gentoo.org> +gflags-9999.ebuild:
  Add live ebuild for testing.

*gflags-2.1.1-r1 (16 Jul 2014)

  16 Jul 2014; Julian Ospald <hasufell@gentoo.org> -gflags-2.1.1.ebuild,
  +gflags-2.1.1-r1.ebuild:
  build shared libs wrt #517244, add static-libs USE flag

  15 Jul 2014; Mike Gilbert <floppym@gentoo.org> gflags-2.1.1.ebuild:
  Drop shared libs again; ABI is not stable.

  15 Jul 2014; Mike Gilbert <floppym@gentoo.org> +files/gflags-2.1.1-libs.patch,
  gflags-2.1.1.ebuild:
  Enable shared libs, make static libs optional. Backport libdir and soname
  changes from upstream.

*gflags-2.1.1 (14 Jul 2014)

  14 Jul 2014; Patrick Lauer <patrick@gentoo.org> +gflags-2.1.1.ebuild:
  Bump, needed as dependency of sys-apps/lmctfy

*gflags-2.0-r1 (25 Feb 2014)

  25 Feb 2014; Mike Frysinger <vapier@gentoo.org> +gflags-2.0-r1.ebuild:
  Add multilib-minimal support.

  19 Oct 2013; Mike Frysinger <vapier@gentoo.org> gflags-2.0.ebuild:
  Add keywords for everyone.

  18 Oct 2013; Mike Frysinger <vapier@gentoo.org> gflags-2.0.ebuild:
  Add more keywords.
