@@ -3,24 +3,20 @@ Hash: SHA256
 
 AUX gflags-2.1.1-libs.patch 1975 SHA256 0906b7e45563eddfe31b7ca1b4862f374c09342a320dbb313ec408a08e743d5f SHA512 8e75d43de9de8053de42573bd0f243b8060bb1f43f995fe555c0cb984bacddddbc670c9f17115f054e5a54bc52a7d3df20b39b03c3229bae397ad3dfbcf9a66c WHIRLPOOL 8d8e5b581edb0539d8d22c91af5deef204abb50ffb22f54c819f9ae177de66118275eb0a46b37098c426e701162b1ed30668b55d43de3959486c23a73f1ea020
 DIST gflags-2.1.1.tar.gz 102015 SHA256 432edece8102fc141c2e3381e2eb5eabb1ce7614851cc96bdec4715105086238 SHA512 18d1a0a1271f12f0e87447e3a9d6810f531f5b190d84274465add5a928c189caac911ec2592422895961ab3c0c7566ff50c0c22f71d185ac3413c54bdbfb00ef WHIRLPOOL 608dc62262d8b4a0451dd3493b02fd35ad5214f1793f173ca5d93e631e15b59cc4557b2a2f9f5e67f72c2ad0d6cd343648b113bf4701fd8f6c3f5d949ac41813
+DIST gflags-2.1.2.tar.gz 95716 SHA256 d8331bd0f7367c8afd5fcb5f5e85e96868a00fd24b7276fa5fcee1e5575c2662 SHA512 f636023c1150e4d536d2d472e40d643ff0b02d3c96d8cb7f31544df23e6255fa6c4fd927ef94a3660c250d3faeae7d8d78519fc5e856749a577347a78d9d9ab5 WHIRLPOOL 2b3bd528c0e2139042a239d50017d93637f5db7007adaa29d3ae3788e57219c8ae8931404ea95766e43d07f17cb9995954ab213b68699ec1de0d21b3b6f86066
 EBUILD gflags-2.1.1-r1.ebuild 920 SHA256 af271958b42650193176cbb95acec477ef9db0b2f5b760f0c9ebc6092668ae73 SHA512 12c3e26f78fe5db5ee9ec375ac12760905e8f6864f784aa0d9fd7921c0dd7a5287eeac2ee4656b5c5164fb519afb360e6091589ef6dbbdce4b55daedcb49a3f6 WHIRLPOOL 744f0a1c32f468343aad9cd60f4fd8589a4b7fdd92ebd852a795c948a56e2d688289fb8eb5d4b26e84c07e65f56e5a102684c93d7b79250617960e1f99cf70b4
+EBUILD gflags-2.1.2.ebuild 864 SHA256 9ee71b904f76172c19e1b929312dd2172da68bba8743c05788af5eab9bb553d5 SHA512 9ab299964b2b320032adf80fcce984b6308de3d72758fc33a8d1a6c7193f46f2c7cde33acc55705ecefe2c9920705195694520bb7125d421cbd6531c5af8ea8d WHIRLPOOL 5c390785b4c46176f74adb2226895a8859dd7f22ce2483ba485746a79611362d6b5c4b762bbfe0bbb98b866945d56496986d4c161cbb1c26e0578ce4ed22ff3f
 EBUILD gflags-9999.ebuild 975 SHA256 11c4eda4eb6b3ce7050c55b434d9f871a672c8127cc861865c33ab7dd94d4345 SHA512 87367045f95691a52d8c3719a70c6fa8f9f56cee936b5f822acb44f709eab05cf6dccf84f90afe3df36879371cfcf1db2b3f20be8c7542a08ed8b2c6e065268b WHIRLPOOL 61212d5eeda67f9be74cef2e877207d41337d71c1a2ee3ad49adfef4c16ca2975460ae9db057e8a5cec57da83cf2ac19ba5ce8ae2821eee3e9f4116d6f5a57a6
-MISC ChangeLog 4799 SHA256 da739867cd4243aa04db4a1ca9d60e870c822c53d9ba587d30af147f362222fb SHA512 358d287e27eccdcfa9ff3455463c7f5e3c9e76f96b2eb4f941f7a2139edbde665b6540f230f159a267785ab36eb9c17925871dde03943d813da4a89e1d598ccf WHIRLPOOL bd6af8bbbee567ba93c4f1c2d20f1debd963dda955d082eb9aa2521948fe99f0db911969ff8775c124273dfb9f106b2c4da0f3b91c906b9931e8894639000991
-MISC metadata.xml 357 SHA256 0dea9eb1075b9df5e8165d29b9c773fea6f919b41d23f5a84348d441bf771799 SHA512 17c87be0989986fffebc0cde3144ac44e7324a6e6ab23796ccb6a63f858e3e725d9a300b056cb9e1965dcb49c40ecd4aa65f1de4a6176b787c5ebc8196a9bb82 WHIRLPOOL cf4351d6fc627a3141145a87b47e6826745ae4dbe8e0e901a79d07c5889972c82308980849a611f90c4f09f975cd30d6b2ee6f04476adbf0a22457e82944b80d
+MISC ChangeLog 4952 SHA256 fa66a2340b977a9ccd72b9c0f1a58a1318f78cb8678539bd63d47f5566043081 SHA512 26f7ea39f1434dea9facab19c20f5b269d7c9ad339d410553cd125f730e060b306e7b5c5da04c4b15f2f6d4130baf58b5cf914ff40b4ead690d101cb7511e503 WHIRLPOOL 8fdec814a5a96510676d2376386ee9eb2b4f9fd2760abb59b3e75f88e5179926fa0d31cdd7c1948c89ca587125f54b7a870d28adc9b2a0fd7eb540765470811e
+MISC metadata.xml 346 SHA256 d99201406394f22b0059bbc578739d8f5f29a118574f72111ccf9577bfaeb69f SHA512 13681ad73a3d749989494de17fb5e949157ff7f9d804c183c78d6bf8914cc58a08e454699ae88bd89998051f6e483998fbbc48fe4617845e9ba897fc8db72510 WHIRLPOOL e5c1adf8b3d01cb3d26cc1f7c243ef92ee760aa7865054e1f92ea5e2f8a06fc022832b7538a76c393ec6119b83a283e9f371b375b1ff8778fd729230b08a4550
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVrzWhAAoJEPGu1DbS6WIANb4P/3Dxj4ciKzxy5CChG/7BpBAk
-wd8FjAF2+/pN9rsMT/mKkC9D9AcMj//Lgft24f49PBsmdbMfraigpvOMnjrknkIw
-seRc/efiBJyoxqD5WCwW4HsMXRsotuCqbAkCQ8gEbkYH2++/Bio7YkfFZ2IYa+yA
-PC+gpv3liNxqm/okY9btEM5xDKe6y5L5czT6RyiVC9tJCWOwsemB4iQgfD32AzIV
-aDXJwF1RNm84DMbupx6mcf+6RkUFvVViuTZr07UvEU5sikkGegBsB+v5USyUCxrt
-5Qm1aHP+Xvo6qQTSjc2geGYv3QZwz0/JBHpv77AJIfXCrtlLvbd3qq8sOmKazrTj
-o9K+mvn2uqwPFsjajLXpPsAmldvm4ZQ9R8yHNlbvnWfYjUk9Ok1XBsdr9Y3EOJn9
-PPsHPkIIvKU+On/QYQzICRiDv5rKwI+8Vz61HJBmAgzCzoTTV5/ZydR+H09e/Uhh
-czgXb1QmZjboL860WlW/kX6tklg66L8Zm5loC5arCoasisk2V0ujyKDeHELwy0Kr
-A4gxkbbDicPmomsTV0PiRrpVIFj87qVoJrMJnvnGhKV9pswzr/364kfwV0gkcQl3
-Mp0IAIF2jERNQZeaKA++1hjmY/mLT0sbQOMSVB1ek3cdLUqjz/RMfFexosjDFkwu
-hLWSpNHwg5bD8q20d4Yd
-=G+WM
+iQEcBAEBCAAGBQJVxK3jAAoJEDuJ1FA05peB0YAIAMLL7fQAt5S6k9BH8HhOmgeB
+k1kLn+xwtOlgGzZPPooJfab/hojg9moDDYEvazu1nqqw90maOptMX8htqEFspb79
+Nk9I/LLy3tGDum3QfIaA6Uyjk8M5F/kixSKPJ/07o0CHqpWuYlTADLlQJ2E3OgI5
+owTgiGSqZva99oHfzF6Xvyf4wiMeXVHwFtbCNKeJ0A+12SoopXn/AlF6byDBTtGI
+x2EOsgV9DmoW81ghFX2+r3Icb66fcyafPKxwarGXbMHA79V8YQwSOkAR2eCihLP6
+oigJ2c4YF3pqYtxvFQKrPxlV1iHpGrF+X3rxmVuwS+R6LoxM+41D49GZ2xFyAkA=
+=o17a
 -----END PGP SIGNATURE-----
