@@ -2,7 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
   <maintainer>
-    <email>maintainer-needed@gentoo.org</email>
+    <email>amynka@gentoo.org</email>
   </maintainer>
   <upstream>
     <remote-id type="google-code">gflags</remote-id>
