@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 AUX CVE-2013-4319-2.x-root-submit-fix.patch 1253 SHA256 a6ebd0c0966148ecb34fb885911e163f93749be72fc5a2e58f11f3c7a9523f45 SHA512 78780ad87e997f22b6abbc3cb51c313616e90320d997705c534c35fbc7f5738b7a2e0ace33051e6e15d4f6e0ab6f97ab9f1ef60dcee5fc4544db13b0a72ea5c4 WHIRLPOOL 64eaf701099da902282b3e1debb6bbfa323fc266ad067047c43dcb353463bf2df7475066f9e263cc9a506b2905aba19c290d50a419ee56a0daa65f237693ede7
 AUX CVE-2013-4319-4.x-root-submit-fix.patch 1412 SHA256 ef88bbbfbda9f7c0d8a98fbd4a0b02e9c662678ba02eac12fbc50521d4d01581 SHA512 89f0b5fedfef5b0db1cdb3d190c7c2fa9c07d175e9b3020ec685e9553d710882ece1155249edeea25902c134ce52bf171fd1e7b2256716351e0e80d3fca5618c WHIRLPOOL 7ee954e3bae8336489bc4e2aed43256d2ecff29e332076255013c78415b4cc5b159b15ab1bc5575493df676393ecd0fd89a1dff4493374f689d3258ad2b7ae57
@@ -24,13 +24,25 @@ DIST torque-4.1.7.tar.gz 6218108 SHA256 3c86b2d84589f54ac222e81dd1953d153e1d8361
 DIST torque-4.2.9.tar.gz 6294022 SHA256 46f1f319683af6d3820e18cda69ce59113c9a5c192e1f07826007be69385889b SHA512 898703fa1d02310c22e2a02b86d67ca52ebed46684597931944edebb39f8293746739c8dca9cd10e07c2e7274c3dd7f65a5664d1980817e3feec58952c4cf4d1 WHIRLPOOL e65be66b056a519ebd1c30c2c1ae2ddf43bc4e617a52d3caced1e6dfd2b0d8b2a83c26a0f2e6e41cfae791aca68b6f91424745b2baffa2085fccc8f6ae9b8e04
 EBUILD torque-2.5.13.ebuild 7739 SHA256 a0dc10b8d9ddca69a4cb7c3332bacc40c507ae2811a88dccef057d490b6578ba SHA512 39f8682c0fcb9ca4c0801ae5eb208544f1adb4a654f9c6524f9122d2fd972b409a9c544878732895aeb7083dda2be5b3606497f431374a9e1ceffc30a8c7410c WHIRLPOOL 2af8ec693634eee2ed688298e8d6778d3cddc42018a7221773c7bd260c87287928a978c8cd27633ffbce83fe39fbaa1f835365c4e6aeea03591a140a530cc925
 EBUILD torque-4.1.7.ebuild 7389 SHA256 0869e937a7a43b76ff431cfd88e75b22e24cd69ba2310800981dc205e0515879 SHA512 9e799657b418178b3428b6927e3afe9f377ce8dfb7bc9c874659aaf86c62c4653380509f4d8561af3ead8ec69f91ce1285510025e50745bb16323eceb3e9a698 WHIRLPOOL 2719e29ec4a020d17e1d7ebd9af4cf97d36f63b5362c44b731477782a4045d09cbb2948515205066e8b14f4198f832a58f2acda234354175dabfb3ffb8ad6931
-EBUILD torque-4.2.9-r4.ebuild 5592 SHA256 b3b3906cfa12c2141dde70cf5bd47030db35b9356f6122787159ef22b44ce2bb SHA512 8927d9e2b61b33c3bb8292b940921c7ade7677aabf3f6288dc940a899508ecce6ce8697636ca5fd39f4cea92e688452be2e179b801ddbf7710c0defc6ca862b6 WHIRLPOOL 38cabad9a9fb98a5a0052606a7ee316fad1632b306199ffff9917167c6abe96152b67dca89f3dbe3eebd87638a195b4c7130747fa7fb29b7b6313e771558b770
-MISC ChangeLog 31831 SHA256 9a80be6b4d5f69bc06868c662837fa8ed096a189915e1a52d9aef0cd725ae169 SHA512 e9b4a758ffc0885198672e7130a861c9b7cdb5db58223ce5a3844cc1899bf5eb8ad8dc16e52aaf49b81cb715c99632994a1c304b0ec597a1f4b761318b22f5cd WHIRLPOOL e476dc9e22479b6821ce724f5956ff665ce978d519bc8a75e214ef69e03bacc8fe24ece6079b69526f38a4dce036fcb1391c7e9090c90d33d0f52a54c55dd892
+EBUILD torque-4.2.9-r4.ebuild 5587 SHA256 23056ac4a769db9551dc7d625ea53b9aa4c26fef5fef56cd0b8364ae8cdf02c3 SHA512 1792cdaafd4672502c042ad94191230115397c6c9a5b30118d0887c22c824f4bdc326f930deae9c185bfbaec265fdb39c4851a01df8ea232517729db5bb80717 WHIRLPOOL d5da717dfd7e8b8fd105902573fca4174a3f432ddcc6ad94d6829f0e9cf3a34174d5bcbdfc8ece7e016942f21c8fcff6bf833d580ce6d8702f49dacea3a083ff
+MISC ChangeLog 31920 SHA256 2007f50e617be4bdd277b65705450288d2eec8067f7dabf231dfedc9365094c3 SHA512 a5cc38230ce5ddc05770e7fe8b8eb19e9cfa707cedfed761d69fc2c9054942a8436860dea440b8a05830113dbf997f3649d15fd78d2c1d57484fbf0d7e560e72 WHIRLPOOL 8a2983c9e98a3dc0e434f4fb0e94e46048484f3ec1d44a3665463ff6d5047222050d8c5593f6af52e2199c5553c391aca3da3b98af0252c0ac6bdf8451f13ada
 MISC metadata.xml 628 SHA256 10fab1886476e44fabbcda6e7dbbc8452d07cb0de0cefcf6e594312dfe89f7af SHA512 d1c78c4247f209eda60a61c9c611c4a4b87d52f85b112a78b96a4dee6f3cd660aef49547323074d69ffce8c1b916c3914f00282781e2f68f76658e6f9ac7ff9b WHIRLPOOL 243373e602f92a256118e6bee6c3071d5894caf3d53a663abee6929a310cf306b15a6a7bd2a0e76882cfe36cd4e8b6c06bb9e12f49f678d085883d61d4a84cf9
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.1
 
-iEYEAREIAAYFAlXCSJkACgkQ4MrvBE1wQ8kglACfTX9IYBNafpt+fRWPD7Xo1vMu
-6tUAoI3C6Go8Xqs2NDjWdGfsyOH6hJqH
-=qbfe
+iQJ8BAEBCgBmBQJVxKwvXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0QUU0N0I4NzFERUI0MTJFN0EyODE0NUFF
+OTQwMkE3OUIwMzUyOUEyAAoJEOlAKnmwNSmiRG4P/iM4GcEf9x1BCQ9fNPWL5SxS
+rOC2plsTk+EzApzcC4+K3ADc8qDD+iXOd1YvBYtPuCIxh1CqX3oQ7QSXM4nzGV5V
+T8jSP6liDJudnQIBNRYEYU/osthyyL+c6tKwx7cHvqEnCYajkkSuojwrwc9/noo/
+3xjgLJON7n6IVSa+c3mq8Z6GZYlz3XxSNKfzQj0ylRalNrCgn6/9dtLC7xRZIX+S
+D2jeKtjhJysmfj4U6Vbd0E55FiVvbQIkCFdM+z1VXE7KruKR8NGKa7hWtGt/4LA8
+iplhCEJD8iQYjAzAny2zbq0JuiVQT9JrospoZ9rbTUOowTHcKb6VHp9YUtKD4W/N
+DrjRLf3ePOZF6C6dyyLaMYFjqwXuQZs7X5p6lHP/uceQumC9yOJIM17pV8mHXDMc
+yjbgdRsJHqnR1rNEOQHb9siqKbxma1e/dsBPWA2IP3MJCsp4uRypT8TmVqG1Ycac
+rRycGFzSvO1bguOGEnNl/gdc/2rAj5HIKxg4e8ooaIs/eSf2M90KMFT7DntHWQHW
+MNW3nVxGy5EYJq1zVksD/IKDDliwT0ws2azlT4AuNkQwtLq4fcidrniSDWjWh4Ez
+0PwubhdKPtMF2Tqv2JBQnKlI62TElrnP7kXehkfR5RanLL+aZl9Hq9nAMCFcQ+l9
+5FNKZXSqRSUtf1GSRXJ+
+=2DXB
 -----END PGP SIGNATURE-----
